--- a/gb/1/2/24/n50944.md
+++ b/gb/1/2/24/n50944.md
@@ -4,81 +4,82 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>台湾二二八事件档案下周解密</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元2月24日讯】今年是二二八事件五十四周年，<ahref=http://www3.epochtimes.com/news/epochnews/main/3.md#1><font color=blue><ahref=http://www3.epochtimes.com/news/epochnews/main/3.md#1><font color=blue><ahref=http://www3.epochtimes.com/news/epochnews/main/3.md#1><font color=blue>台湾</font></A></font></A></font></A>行政院研考会即将成立的国家档案局，将于二月二十八日“和平纪念日”当天公布部分解禁的二二八机密史料。 </p>
+	<p>【大纪元2月24日讯】今年是二二八事件五十四周年，<font color="blue"><ahref="https://www3.epochtimes.com/news/epochnews/main/3.md#1"><font color="blue"><ahref="https://www3.epochtimes.com/news/epochnews/main/3.md#1"><font color="blue">台湾</font></a></font></a></font>行政院研考会即将成立的国家档案局，将于二月二十八日“和平纪念日”当天公布部分解禁的二二八机密史料。 </p>
 <p>东方日报报导，一九四五至四九年有关“二二八事件”的五万多件部分珍贵史料，将于周三公开展览，其中许多史料属首度曝光。 </p>
 <p>二二八事件发生于一九四七年二月二十八日，肇因是台湾省专卖局的缉私员在台北扫荡私时枪杀了一名市民陈文溪。翌日有民众游行请愿被宪兵用机枪扫射，三十人伤亡，全市骚动，暴动迅速蔓延全岛。国民政府于三月八日晚派军登陆镇压，台民陷于长时间的白色恐怖中。 </p>
 <p>台湾已故总统蒋介石在事件中的角色、死亡人数一直是谜。 </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50942 target=_blank class=ltnn>台破国际贩毒捡10亿港元海洛英 </a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50940 target=_blank class=ltnn>传两岸官员第三地密晤 </a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50930 target=_blank class=ltnn>陆委会对白桂林行程断章取义 白欲辞台北<ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue><ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue>大陆</font></A></font></A>召集人一职</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50925 target=_blank class=ltnn>吕秀莲观赏少林演出 呼吁两岸和平共存</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50921 target=_blank class=ltnn>台湾景气差宏电再次大裁员 </a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50862 target=_blank class=ltnn>台湾等国商品高库存情况比美国更严重</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50833 target=_blank class=ltnn>反建核四 台湾万人示威大游行</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50790 target=_blank class=ltnn><ahref=http://www.epochtimes.com/news/epochnews/comt/comauth.asp?cat_ID=423&#038;subsubcat=Linfeng><font color=blue><ahref=http://www.epochtimes.com/news/epochnews/comt/comauth.asp?cat_ID=423&#038;subsubcat=Linfeng><font color=blue>凌锋</font></A></font></A>：欢迎<ahref=http://www.dajiyuan.com/news/epochnews/news/Focus.asp?Focus_ID=382><font color=blue><ahref=http://www.dajiyuan.com/news/epochnews/news/Focus.asp?Focus_ID=382><font color=blue>高行健</font></A></font></A>，但不必求全</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50751 target=_blank class=ltnn>534个炼功点星罗棋布 <ahref=http://falundafa.org><font color=blue><ahref=http://falundafa.org><font color=blue>法轮功</font></A></font></A>10万遍布台湾</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50746 target=_blank class=ltnn>台湾驻日代表唱军歌惹民愤</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50734 target=_blank class=ltnn>台湾“陆委会”对赴大陆官员设八道禁令 </a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50719 target=_blank class=ltnn>解放军新式飞弹完成战测　进展好快</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50717 target=_blank class=ltnn>新闻<ahref=http://www3.epochtimes.com/news/epochnews/main/9.md#1><font color=blue><ahref=http://www3.epochtimes.com/news/epochnews/main/9.md#1><font color=blue>图片</font></A></font></A>欣赏：台湾反核游行标语牌</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50713 target=_blank class=ltnn>半导体不景气 应用材料看低</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50714 target=_blank class=ltnn>台海开战 美军将爱莫能助？</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50658 target=_blank class=ltnn>莱斯：美对台军售取决于“台湾自我防卫需要”</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50654 target=_blank class=ltnn>台湾出现“花莲怪病” 引起巨大恐慌</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50634 target=_blank class=ltnn>慰安妇问题 吕秀莲不<ahref=http://www3.epochtimes.com/news/epochnews/main/8.md#1><font color=blue><ahref=http://www3.epochtimes.com/news/epochnews/main/8.md#1><font color=blue>评论</font></A></font></A></a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50630 target=_blank class=ltnn>主计处: 受雇员工人数近来呈持续减少趋势 </a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50627 target=_blank class=ltnn>2001年1月台湾失业率为3.35%</a> (2/23/2001)<br />
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50927 target=_blank class=ltnn>228档案征集 军情机关高度配合</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50439 target=_blank class=ltnn>快讯：两蒋时代机密档案 扁下周将解禁</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49644 target=_blank class=ltnn>明日报小档案</a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48705 target=_blank class=ltnn>柏林影展最佳导演银熊奖得主林正盛小档案</a> (2/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48256 target=_blank class=ltnn>Napster将推出新技术管制音乐下载次数</a> (2/16/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47512 target=_blank class=ltnn>小参考：纽约法轮功组织指中共镇压矛头指向海外 </a> (2/15/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47489 target=_blank class=ltnn>薄熙来小档案</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47488 target=_blank class=ltnn>马英九小档案</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=47248 target=_blank class=ltnn>俄国斯大林毛泽东档案解密</a> (2/14/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=46821 target=_blank class=ltnn>小心“库妮可娃病毒”使网路瘫痪</a> (2/13/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=46115 target=_blank class=ltnn>反法轮功再升级：打击机构直属政治局 海内外倾力搜集“证据”</a> (2/11/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=45086 target=_blank class=ltnn>电影揭开古巴飞弹危机秘辛 传美国计划炸<ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue>中国</font></A>使馆 </a> (2/8/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=42000 target=_blank class=ltnn>水门事件录音带在美上市 高层政治丑事暴光</a> (2/1/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=41061 target=_blank class=ltnn>静坐冥思及心灵健康档案在MP3.com下载排行榜居首</a> (1/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40868 target=_blank class=ltnn>广受欢迎的档案共享将对网站用户收费</a> (1/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40626 target=_blank class=ltnn> 人事局长将儿子和弟弟弄成了国家干部</a> (1/29/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=39416 target=_blank class=ltnn>菲律宾总统下台内幕</a> (1/25/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38462 target=_blank class=ltnn>印尼总统瓦西德有中国血统？</a> (1/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37630 target=_blank class=ltnn>黑客视频技术源码向公众开放</a> (1/21/2001)<br />
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50960 target=_blank class=ltnn>张俊雄：须恢复228真实面貌</a> (2/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50512 target=_blank class=ltnn>二二八放假 确定</a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50439 target=_blank class=ltnn>快讯：两蒋时代机密档案 扁下周将解禁</a> (2/23/2001)<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50942" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台破国际贩毒捡10亿港元海洛英 </a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50940" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">传两岸官员第三地密晤 </a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50930" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陆委会对白桂林行程断章取义 白欲辞台北</a><font color="blue"><ahref="https://www3.epochtimes.com/news/epochnews/main/2.md#1"><font color="blue">大陆</font></a></font>召集人一职 (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50925" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">吕秀莲观赏少林演出 呼吁两岸和平共存</a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50921" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾景气差宏电再次大裁员 </a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50862" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾等国商品高库存情况比美国更严重</a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50833" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">反建核四 台湾万人示威大游行</a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50790" target="_blank" class="ltnn" rel="nofollow noopener noreferrer"></a><ahref="https://www.epochtimes.com/news/epochnews/comt/comauth.asp?cat_ID=423&amp;subsubcat=Linfeng" rel="nofollow noopener noreferrer"><font color="blue"><ahref="https://www.epochtimes.com/news/epochnews/comt/comauth.asp?cat_ID=423&amp;subsubcat=Linfeng" rel="nofollow noopener noreferrer"><font color="blue">凌锋</font></a></font></a>：欢迎<font color="blue"><ahref="https://www.dajiyuan.com/news/epochnews/news/Focus.asp?Focus_ID=382"><font color="blue">高行健</font></a></font>，但不必求全 (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50751" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">534个炼功点星罗棋布 </a><ahref="https://falundafa.org" rel="nofollow noopener noreferrer"><font color="blue"><ahref="https://falundafa.org" rel="nofollow noopener noreferrer"><font color="blue">法轮功</font></a></font></a>10万遍布台湾 (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50746" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾驻日代表唱军歌惹民愤</a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50734" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾“陆委会”对赴大陆官员设八道禁令 </a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50719" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">解放军新式飞弹完成战测　进展好快</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50717" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">新闻</a><font color="blue"><ahref="https://www3.epochtimes.com/news/epochnews/main/9.md#1"><font color="blue">图片</font></a></font>欣赏：台湾反核游行标语牌 (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50713" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">半导体不景气 应用材料看低</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50714" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台海开战 美军将爱莫能助？</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50658" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">莱斯：美对台军售取决于“台湾自我防卫需要”</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50654" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾出现“花莲怪病” 引起巨大恐慌</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50634" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">慰安妇问题 吕秀莲不</a><font color="blue"><ahref="https://www3.epochtimes.com/news/epochnews/main/8.md#1"><font color="blue">评论</font></a></font> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50630" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">主计处: 受雇员工人数近来呈持续减少趋势 </a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50627" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">2001年1月台湾失业率为3.35%</a> (2/23/2001)<br />
+</li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50927" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">228档案征集 军情机关高度配合</a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50439" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">快讯：两蒋时代机密档案 扁下周将解禁</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49644" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">明日报小档案</a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48705" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">柏林影展最佳导演银熊奖得主林正盛小档案</a> (2/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48256" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">Napster将推出新技术管制音乐下载次数</a> (2/16/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47512" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">小参考：纽约法轮功组织指中共镇压矛头指向海外 </a> (2/15/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47489" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">薄熙来小档案</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47488" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">马英九小档案</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=47248" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">俄国斯大林毛泽东档案解密</a> (2/14/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=46821" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">小心“库妮可娃病毒”使网路瘫痪</a> (2/13/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=46115" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">反法轮功再升级：打击机构直属政治局 海内外倾力搜集“证据”</a> (2/11/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=45086" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">电影揭开古巴飞弹危机秘辛 传美国计划炸</a><font color="blue">中国</font>使馆(2/8/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42000" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">水门事件录音带在美上市 高层政治丑事暴光</a> (2/1/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=41061" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">静坐冥思及心灵健康档案在MP3.com下载排行榜居首</a> (1/30/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40868" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">广受欢迎的档案共享将对网站用户收费</a> (1/30/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40626" target="_blank" class="ltnn" rel="nofollow noopener noreferrer"> 人事局长将儿子和弟弟弄成了国家干部</a> (1/29/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39416" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">菲律宾总统下台内幕</a> (1/25/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38462" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">印尼总统瓦西德有中国血统？</a> (1/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37630" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">黑客视频技术源码向公众开放</a> (1/21/2001)<br />
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50960" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">张俊雄：须恢复228真实面貌</a> (2/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50512" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">二二八放假 确定</a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50439" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">快讯：两蒋时代机密档案 扁下周将解禁</a> (2/23/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/21/n37630.md#1">黑客视频技术源码向公众开放</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/23/n38462.md#1">印尼总统瓦西德有中国血统？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/25/n39416.md#1">菲律宾总统下台内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/29/n40626.md#1">人事局长将儿子和弟弟弄成了国家干部</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/5/n11701848.md#1" target="_blank">袁斌：从《共产党宣言》看共产主义的破坏性</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548905.md#1">【唐青看时事】美参院出大招 拟中俄“一锅端”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14549024.md#1">【重播】卢比奥在吉隆坡举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548117.md#1">【未解之谜】语出惊人 算尽风云 民国第一神算传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/24/n50944.htm">台湾二二八事件档案下周解密</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/24/n50944.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
